--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,15 @@
       url('./fonts/Samim.woff2') format('woff2');
   font-weight: normal;
 }
+@font-face {
+  font-family: "FontAwesome";
+  src: url('../node_modules/font-awesome/fonts/fontawesome-webfont.eot') format('embedded-opentype'),
+      url('../node_modules/font-awesome/fonts/fontawesome-webfont.ttf') format('truetype'),
+      url('../node_modules/font-awesome/fonts/fontawesome-webfont.woff') format('woff'),
+      url('../node_modules/font-awesome/fonts/fontawesome-webfont.woff2') format('woff2'),
+      url('../node_modules/font-awesome/fonts/fontawesome-webfont.svg') format('svg');
+  font-weight: normal;
+}
 body {
   // background-color: blue;
   h2 {
